finished to fix normal sell

--- a/app/src/main/res/layout/dialog_change_feature.xml
+++ b/app/src/main/res/layout/dialog_change_feature.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_label_choose"
@@ -12,16 +12,16 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="50dp"
         android:text="ရှေ့ဆက်ရန်‌ရွေးချယ်ပါ"
+        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
         android:textColor="@color/primary_text"
-        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginEnd="64dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_choose"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,14 +32,14 @@
         android:id="@+id/btn_pawn"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:background="@drawable/background_btn"
         android:text="အပေါင်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +49,12 @@
         android:id="@+id/btn_buy"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/background_btn"
         android:text="အဝယ်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/btn_pawn"
         app:layout_constraintStart_toStartOf="@+id/btn_pawn"
@@ -64,13 +64,15 @@
         android:id="@+id/btn_sell"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/background_btn"
         android:text="အရောင်း"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_buy"
         app:layout_constraintStart_toStartOf="@+id/btn_buy"
         app:layout_constraintTop_toBottomOf="@+id/btn_buy" />
