--- a/app/src/main/res/layout/dialog_sell_type.xml
+++ b/app/src/main/res/layout/dialog_sell_type.xml
@@ -13,15 +13,15 @@
         android:layout_marginTop="50dp"
         android:text="ရှေ့ဆက်ရန်‌ရွေးချယ်ပါ"
         android:textColor="@color/primary_text"
-        android:textSize="28sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginEnd="64dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_choose"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,14 +32,14 @@
         android:id="@+id/btn_normal_sell"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:background="@drawable/background_btn"
         android:text="ပုံမှန်အရောင်း"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +49,12 @@
         android:id="@+id/btn_receive_new_order"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/background_btn"
         android:text="‌အော်ဒါအသစ်လက်ခံ"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/btn_normal_sell"
         app:layout_constraintStart_toStartOf="@+id/btn_normal_sell"
@@ -64,12 +64,12 @@
         android:id="@+id/btn_akouk_sell"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/background_btn"
         android:text="အခေါက်အရောင်း"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/btn_receive_new_order"
         app:layout_constraintStart_toStartOf="@+id/btn_receive_new_order"
@@ -79,13 +79,13 @@
         android:id="@+id/btn_general_sell"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="55dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/background_btn"
         android:text="အထွေထွေအရောင်း"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_akouk_sell"
