--- a/app/src/main/res/layout/dialog_exchange_order.xml
+++ b/app/src/main/res/layout/dialog_exchange_order.xml
@@ -2,27 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_label_choose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:text="ရှေ့ဆက်ရန်‌ရွေးချယ်ပါ"
         android:textColor="@color/primary_text"
-        android:textSize="28sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_choose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_label_choose"
@@ -32,14 +32,14 @@
         android:id="@+id/btn_with_value"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="64dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/background_btn"
         android:text="တန်ဖိုးဖြင့်"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,15 +49,15 @@
         android:id="@+id/btn_with_KPY"
         style="@android:style/Widget.Button"
         android:layout_width="0dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="64dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/background_btn"
         android:text="ကျပ်ပဲရွေးဖြင့်"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
