--- a/app/src/main/res/layout/dialog_stock_check.xml
+++ b/app/src/main/res/layout/dialog_stock_check.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <TextView
@@ -13,17 +13,17 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="ဘောင်ချာနံပါတ် :"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="45dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@color/primary"
         android:divider="@color/white"
@@ -40,8 +40,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Stock ကုဒ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/white"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -51,8 +51,8 @@
             android:layout_weight="1.1"
             android:gravity="center"
             android:text="ရွှေ+ကျောက်အလေးချိန်(gm)"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/white"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -62,8 +62,8 @@
             android:layout_weight="1.3"
             android:gravity="center"
             android:text="ယူမယ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/white"
-            android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -80,27 +80,30 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:listitem="@layout/item_stock_check" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_continue"
-        style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/background_btn"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="‌ရှေ့ဆက်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/iv_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_voucher_number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,9 +115,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:textColor="@color/primary_text"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/primary_text"
         app:layout_constraintBottom_toBottomOf="@+id/tv_label_voucher_number"
         app:layout_constraintStart_toEndOf="@+id/tv_label_voucher_number"
         app:layout_constraintTop_toTopOf="@+id/tv_label_voucher_number" />
