--- a/app/src/main/res/layout/fragment_scan_stock.xml
+++ b/app/src/main/res/layout/fragment_scan_stock.xml
@@ -9,68 +9,81 @@
         android:id="@+id/tv_label_stock_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:text="Stock Code"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_stock_code"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_stock_code"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edit_stock_code" />
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout_stock_code" />
 
-    <EditText
-        android:id="@+id/edit_stock_code"
-        android:layout_width="400dp"
-        android:layout_height="70dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout_stock_code"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
-        android:background="@drawable/background_edit_text"
-        android:ems="10"
-        android:hint="Type or Scan"
-        android:inputType="textPersonName"
-        android:paddingStart="16dp"
-        android:paddingEnd="32dp"
-        android:textColor="@color/primary_text"
-        android:textSize="22sp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeColor="@color/edit_text_color"
+        app:boxStrokeWidth="1dp"
+        app:errorEnabled="false"
+        app:hintEnabled="false"
         app:layout_constraintStart_toEndOf="@+id/tv_label_stock_code"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_stock_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Type or Scan"
+            android:textColorHint="@color/secondary_text"
+            android:inputType="textPersonName"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/primary_text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_continue"
-        style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/background_btn"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:text="ရှေ့ဆက်"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="‌ရှေ့ဆက်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_stock_code"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edit_stock_code" />
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout_stock_code" />
 
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/label_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_stock_code" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_stock_code" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_stock_code_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
