--- a/app/src/main/res/layout/item_gold_from_home.xml
+++ b/app/src/main/res/layout/item_gold_from_home.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="55dp"
         android:orientation="horizontal"
         android:divider="@color/white"
         android:showDividers="middle"
@@ -24,10 +24,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|start"
-            android:paddingStart="16dp"
+            android:paddingStart="32dp"
             android:text="လက်စွပ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -36,10 +36,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1.1"
             android:gravity="center|start"
-            android:paddingStart="16dp"
+            android:paddingStart="32dp"
             android:text="550,000"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
@@ -48,10 +48,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1.1"
             android:gravity="center|start"
-            android:paddingStart="16dp"
+            android:paddingStart="32dp"
             android:text="0K 1P 6Y"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
@@ -60,10 +60,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1.1"
             android:gravity="center|start"
-            android:paddingStart="16dp"
+            android:paddingStart="32dp"
             android:text="550,000"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,9 +75,9 @@
 
             <ImageView
                 android:id="@+id/iv_delete_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -85,8 +85,8 @@
 
             <ImageView
                 android:id="@+id/iv_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_delete_bg"
                 app:layout_constraintEnd_toEndOf="@+id/iv_delete_bg"
                 app:layout_constraintStart_toStartOf="@+id/iv_delete_bg"
@@ -95,9 +95,9 @@
 
             <ImageView
                 android:id="@+id/iv_edit_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -105,8 +105,8 @@
 
             <ImageView
                 android:id="@+id/iv_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_edit_bg"
                 app:layout_constraintEnd_toEndOf="@+id/iv_edit_bg"
                 app:layout_constraintStart_toStartOf="@+id/iv_edit_bg"
