--- a/app/src/main/res/layout/item_stock_check.xml
+++ b/app/src/main/res/layout/item_stock_check.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="55dp"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp">
 
@@ -20,7 +20,7 @@
             android:paddingStart="32dp"
             android:text="SM-PRD-000000001"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -32,7 +32,7 @@
             android:paddingStart="32dp"
             android:text="2.45"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <CheckBox
