--- a/app/src/main/res/layout/item_stock_code_item.xml
+++ b/app/src/main/res/layout/item_stock_code_item.xml
@@ -11,13 +11,13 @@
     app:cardElevation="3dp">
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_item"
-        android:layout_width="220dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:text="SM-PRD-000000001"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/iv_item"
         app:layout_constraintStart_toStartOf="@+id/iv_item"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="12”"
         android:textColor="@color/primary_text"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         app:layout_constraintEnd_toEndOf="@+id/tv_code"
         app:layout_constraintStart_toStartOf="@+id/tv_code"
         app:layout_constraintTop_toBottomOf="@+id/tv_code" />
@@ -54,7 +54,7 @@
         android:layout_marginBottom="8dp"
         android:text="400,000"
         android:textColor="@color/primary"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tv_size"
