--- a/app/src/main/res/layout/fragment_outside_stock.xml
+++ b/app/src/main/res/layout/fragment_outside_stock.xml
@@ -6,30 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_take"
-        style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_gravity="end"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/background_btn"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="ယူမည်"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
-        android:textSize="22sp"
         android:textStyle="bold"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
 
-
     <ImageView
         android:id="@+id/iv_outside_item"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/outside_item" />
@@ -38,7 +39,7 @@
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/iv_outside_item"
         app:layout_constraintTop_toTopOf="@+id/iv_outside_item">
@@ -48,23 +49,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="အော်ဒါထည် အမည်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_order_item_name"
-            android:layout_width="370dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/background_edit_text"
-            android:ems="10"
-            android:hint="Type"
-            android:inputType="text"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textColorHint="@color/secondary_text"
-            android:textSize="22sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_order_item_name"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="270dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="4dp"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxStrokeColor="@color/edit_text_color"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_order_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Type"
+                android:inputType="number"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/secondary_text" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -81,22 +94,34 @@
             android:layout_height="wrap_content"
             android:text="အလေးချိန် (gm)"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_weight"
-            android:layout_width="370dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/background_edit_text"
-            android:ems="10"
-            android:hint="Type"
-            android:inputType="text"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textColorHint="@color/secondary_text"
-            android:textSize="22sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_weight"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="270dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="4dp"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxStrokeColor="@color/edit_text_color"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_weight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Type"
+                android:inputType="number"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/secondary_text" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -104,7 +129,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="64dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toStartOf="@+id/btn_take"
@@ -116,44 +141,60 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="မှတ်ချက်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_note"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_note"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/background_edit_text"
-            android:ems="10"
-            android:gravity="top"
-            android:hint="Type"
-            android:inputType="textMultiLine"
-            android:paddingStart="16dp"
-            android:paddingTop="16dp"
-            android:paddingEnd="16dp"
-            android:textColorHint="@color/secondary_text"
-            android:textSize="22sp" />
+            android:layout_marginTop="4dp"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxStrokeColor="@color/edit_text_color"
+            app:boxStrokeWidth="1dp"
+            app:errorEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="top"
+                android:hint="Type"
+                android:inputType="textMultiLine"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/secondary_text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/image_btn_select"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/background_btn"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
-        android:src="@drawable/right"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_select"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="end"
+        android:layout_marginStart="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:cornerRadius="10dp"
+        app:icon="@drawable/right"
+        app:iconSize="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/linearLayout3" />
 
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@color/label_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
