--- a/app/src/main/res/layout/item_inventory_stock.xml
+++ b/app/src/main/res/layout/item_inventory_stock.xml
@@ -2,10 +2,11 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="380dp"
+    android:layout_width="280dp"
     android:layout_height="wrap_content"
-    android:layout_margin="24dp"
-    app:cardCornerRadius="10dp">
+    android:layout_margin="20dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,11 +17,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="SM-PRD-000000002"
             android:textColor="@color/primary"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/iv_cancel"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +29,8 @@
 
         <ImageView
             android:id="@+id/iv_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_stock_code"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,10 +39,10 @@
 
         <ImageView
             android:id="@+id/iv_item"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_stock_code"
             app:layout_constraintTop_toBottomOf="@+id/tv_stock_code"
@@ -62,7 +63,7 @@
             android:paddingTop="16dp"
             android:paddingEnd="16dp"
             android:textColorHint="@color/secondary_text"
-            android:textSize="18sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_item"
