--- a/app/src/main/res/layout/item_akouk_sell.xml
+++ b/app/src/main/res/layout/item_akouk_sell.xml
@@ -2,12 +2,12 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     app:cardCornerRadius="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:divider="@color/white"
         android:showDividers="middle"
@@ -24,7 +24,7 @@
             android:gravity="center"
             android:text="အခဲ"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:text="1K 0P 0Y"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -46,7 +46,7 @@
             android:gravity="center"
             android:text="0K 0P 0Y"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -57,7 +57,7 @@
             android:gravity="center"
             android:text="4,000"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -68,7 +68,7 @@
             android:gravity="center"
             android:text="4,000"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
         <TextView
@@ -79,7 +79,7 @@
             android:gravity="center"
             android:text="1,000,000"
             android:textColor="@color/primary_text"
-            android:textSize="22sp"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
     </LinearLayout>
