fix fragment_create_pawn.xml & fragment_receive_new_order.xml

--- a/app/src/main/res/layout/fragment_receive_new_order.xml
+++ b/app/src/main/res/layout/fragment_receive_new_order.xml
@@ -1411,7 +1411,7 @@
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_inventory"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="45dp"
                         android:layout_marginEnd="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/white"
@@ -1436,7 +1436,7 @@
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_outside"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="45dp"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/white"
